[package]
name        = "remote-link"
version     = "0.1.0"
edition     = "2021"
description = "Acesso remoto peer-to-peer"

[[bin]]
name = "remote-link"
path = "src/main.rs"

[dependencies]
eframe      = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui        = "0.27"
tokio       = { version = "1", features = ["full"] }
xcap        = "0.2"
enigo       = "0.2"
image       = { version = "0.25", default-features = false, features = ["jpeg"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
dirs        = "5"
arboard     = "3"
uuid        = { version = "1", features = ["v4"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite   = { version = "0.21", features = ["native-tls"] }
futures-util        = "0.3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
